# framework

./: install_framework.sh  install_framework_with_flexlm.sh  install_framework_with_flexlm_and_rlm_server.sh  install_framework_with_rlm.sh  install_framework_with_rlm_TEST1.sh  install_framework_with_rlm_TEST2.sh
.github/workflows/: ifpen_el8_gimkl-2021b.yml  ifpen_el9_foss-2021b.yml
arcane/: CMakeLists.txt
arcane/cmake/: FindFlexLM.cmake  FindRLM.cmake
arcane/src/arcane/impl/: ArcaneMain.cc  CMakeLists.txt  FlexLMTools.cc  FlexLMTools.cc_Arcane-v20241231.0  FlexLMTools.h  FlexLMTools.h_Arcane-v20241231.0
